# ElkiPalki

./: README.org  main.py  pyproject.toml
api/: alembic.ini  db.dbml  main.py  pyproject.toml
api/migrations/: README  env.py
api/migrations/versions/: be556b4314aa_database_creation.py
api/pawapi/: __all_models.py  admin.py  cli.py  config.py  crud.py  database.py  enums.py  models.py  router.py  test.py
api/pawapi/admin/: admin.py  auth.py  panel.py  router.py  views.py
api/pawapi/animal/: models.py  ormschemas.py  router.py  schemas.py
api/pawapi/animals/: enums.py  models.py  ormschemas.py  router.py  schemas.py
api/pawapi/auth/: backend.py  bearer.py  manager.py  models.py  router.py  schemas.py  strategy.py
api/pawapi/db/: annotations.py  database.py  enums.py  models.py  test.py
api/pawapi/user/: models.py  schemas.py
api/pawapi/user/auth/: backend.py  database.py  dependencies.py  manager.py  router.py  strategy.py  utils.py
api/pawapi/users/: router.py  schemas.py
api/pawapi/walk/: models.py  ormschemas.py  router.py  schemas.py
api/pawapi/walks/: models.py  ormschemas.py  router.py  schemas.py
app/: main.py  pyproject.toml  requirements.txt  settings.json
app/WatchDogs/: app.py  registration.py
app/pawapp/: app.py  colors.py  styles.py
app/pawapp/components/: animal.py  animal_admin.py  appbar.py  login_form.py  register_form.py
app/pawapp/pages/: TablePageAdmin.py  about_animal.py  admin.py  adminchoices.py  animal_walks.py  animals.py  eat.py  edit_animal.py  welcome.py
app/pawapp/services/: admin.py  animal.py  animals.py  config.py  maps.py  settings.py  user.py  users.py  walk.py  walks.py
