[tool.poetry]
name = "PawPalaceAPI"
version = "0.1.0"
description = "API for PawPalace app"
authors = ["g <zzu1u@list.ru>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
# Base
python = "^3.10"

# API
fastapi = "^0.110.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
uvicorn = "^0.29.0"
sqladmin = "^0.16.1"

# Data
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"

# DB
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
alembic = "^1.13.1"

# CLI
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
