[tool.poetry]
name = "PawPalaceApp"
version = "0.1.0"
description = "PawPalace app"
authors = ["glrb", "NikolayNE", "StepanAdskiy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
